<resources>
    <string name="app_name">今晚吃啥</string>
    <string name="back">&#xe61e;</string>
    <string name="add">&#xe6a1;;</string>
    <string name="image_button_description">Your speakable text description</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_by_code">验证码登录</string>
    <string name="cell">手机号：</string>
    <string name="input_cell">请输入手机号</string>
    <string name="password">&#160; &#160; 密码：</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="input_new_password">输入新密码：</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="confirm_new_password">确认新密码：</string>
    <string name="hint_new_password_again">请再次输入新密码</string>
    <string name="code">验证码：</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="login">登&#160; &#160;录</string>
    <string name="done">确&#160; &#160;定</string>
</resources>