<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/eat"
        android:scaleType="fitCenter"
        android:padding="15dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_margin="20dp"
        android:background="@drawable/et_bg"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cell"
            android:textSize="23sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_cell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_cell"
            android:inputType="number"
            android:maxLength="11"
            android:text="18458096021"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_size"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="23sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_password"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:text="123456"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_size" />

    </LinearLayout>

    <Button
        android:id="@+id/b_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</LinearLayout>